# Likelihood

./: .cvsignore  .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  LikelihoodLib.py  SConscript  azure-pipelines.yml  testpipelinetrigger
Likelihood/: Accumulator.h  Aeff.h  AppBase.h  AppHelpers.h  Arg.h  BandFunction.h  BinnedConfig.h  BinnedCountsCache.h  BinnedExposure.h  BinnedExposureBase.h  BinnedHealpixExposure.h  BinnedLikelihood.h  BinnedLikelihood2.h  BrokenPowerLaw2.h  BrokenPowerLaw3.h  BrokenPowerLawExpCutoff.h  Composite2.h  CompositeFunction.h  CompositeLikelihood.h  CompositeSource.h  ConstantValue.h  Constraint.h  Convolve.h  ConvolveHealpix.h  CountsMap.h  CountsMapBase.h  CountsMapHealpix.h  CountsSpectra.h  DMFitFunction.h  DMFitFunction2.h  DataCube.h  DataCubeIterator.h  DiffRespIntegrand.h  DiffRespIntegrand2.h  DiffRespNames.h  DiffuseMap.h  DiffuseParametric.h  DiffuseSource.h  Drm.h  Drmngb.h  (+121 more)
cmt/: .cvsignore  requirements
cmt/fragments/: swig  swig_library
data/: Crab_model.xml  LatCountsMapTemplate  LatHealpixTemplate  LatHealpixWeightsTemplate  LatWeightsMapTemplate  LivetimeCubeTemplate  RoiCuts.xml  TsCubeTemplate  TsMap.par  TsMapTemplate  Virgo_region.xml  Virgo_region_2.xml  anticenter_Roi.xml  anticenter_expMap.fits  anticenter_model.xml  anticenter_model_2.xml  anticenter_model_3.xml  anticenter_model_4.xml  anticenter_model_bpl.xml  ccube_galdiffuse_hpx.fits  ccube_single_src_events_hpx.fits  cena_lobes_parkes_south.fits  expMap.par  expMap_0.fits  expMap_1.fits  expMap_2.fits  expMap_3.fits  expMap_4.fits  galdiffuse_events_0000.fits  likelihood.par  mapcube.fits  oneday_events_0000.fits  oneday_scData_0000.fits  single_src_events_0000.fits  test_runParams.par  weights_test.fits
doc/: Doxyfile  Makefile  release.notes
doc/binned_like/: .gitignore  Makefile  binned_like.tex
doc/weighted_like/: .gitignore  Makefile  weighted_like.tex
pfiles/: TsMap.par  diffuseResponses.par  expMap.par  exposureMap.par  gtaddlivetime.par  gtalphabkg.par  gtbackfile.par  gtbkg.par  gtcntsmap.par  gtdiffresp.par  gtdiffrsp.par  gtdrm.par  gtebl.par  gteffbkg.par  gtexpcube2.par  gtexpmap.par  gtfindsrc.par  gthealcube.par  gtlike.par  gtlikelihood.par  gtlivetimecube.par  gtltcube.par  gtltsum.par  gtmodel.par  gtmodelmap.par  gtpsf.par  gtsrcmaps.par  gtsrcprob.par  gttscube.par  gttsmap.par  gtwtsmap.par  likelihood.par  makeExposureCube.par  meanPsf.par
python/: Likelihood.i  Likelihood.in  Makefile  SimpleDialog.py  SrcAnalysis.py  SrcModel.py  load_data.py  setup.py  test.py
src/: AbsEdge.cxx  AbsEdge.h  Accumulator.cxx  Aeff.cxx  AppBase.cxx  AppHelpers.cxx  BandFunction.cxx  BinnedConfig.cxx  BinnedCountsCache.cxx  BinnedExposure.cxx  BinnedExposureBase.cxx  BinnedHealpixExposure.cxx  BinnedLikelihood.cxx  BinnedLikelihood2.cxx  BrokenPowerLaw.cxx  BrokenPowerLaw.h  BrokenPowerLaw2.cxx  BrokenPowerLaw3.cxx  BrokenPowerLawExpCutoff.cxx  Composite2.cxx  CompositeFunction.cxx  CompositeLikelihood.cxx  CompositeSource.cxx  Constraint.h  Convolve.cxx  ConvolveHealpix.cxx  CountsMap.cxx  CountsMap.h  CountsMapBase.cxx  CountsMapHealpix.cxx  CountsSpectra.cxx  DataCube.h  DataCubeIterator.h  DiffRespIntegrand.cxx  DiffRespIntegrand2.cxx  DiffRespNames.cxx  DiffuseMap.h  DiffuseParametric.h  DiffuseSource.cxx  DiffuseSource.h  (+154 more)
src/TsCube/: HealCube.cxx  TsCube.cxx
src/TsMap/: TsMap.cxx
src/backfile/: backfile.cxx
src/counts_map/: counts_map.cxx
src/diffuseResponses/: diffuseResponses.cxx
src/dmfit/: DMFitFunction.cxx  DMFitFunction2.cxx  dmfit_comm.c  dmfit_comm.f  dmfit_func.c  dmfit_func.f  dmfit_load.c  dmfit_load.f  test.f  test.py
src/expMap/: expMap.cxx
src/exposureMap/: exposureMap.cxx
src/gtaddlivetime/: gtaddlivetime.cxx
src/gtalphabkg/: gtalphabkg.cxx  gtalphabkg.cxx~
src/gtcntsmap/: gtcntsmap.cxx
src/gtdrm/: gtdrm.cxx
src/gtebl/: gtebl.cxx
src/gteffbkg/: gteffbkg.cxx
src/gtexpcube2/: gtexpcube2.cxx
src/gtfindsrc/: gtfindsrc.cxx
src/gtmodelmap/: SourceMapRegistry.cxx  SourceMapRegistry.h  gtmodelmap.cxx
src/gtsrcmaps/: gtsrcmaps.cxx
src/gtsrcprob/: gtsrcprob.cxx
src/gtwtsmap/: gtwtsmap.cxx
src/likelihood/: EasyPlot.cxx  EasyPlot.h  MathUtil.cxx  MathUtil.h  likelihood.cxx  matplotlibcpp.h
src/makeExposureCube/: makeExposureCube.cxx
src/meanPsf/: meanPsf.cxx
src/old_tests/: main.cxx
src/test/: SourceData.cxx  SourceData.h  TsMap.cxx  XmlDiff.cxx  XmlDiff.h  expMap.cxx  like_test.cxx  likelihood.cxx  main.cxx  makeExposureCube.cxx  test.cxx  test_runParams.cxx
src/test/CALDB/: aeff_lat.fits  psf_lat.fits
src/test/Data/: anti_center_0000  anti_center_sc_0000  diffuse_test_4_0000  diffuse_test_4_sc_0000  diffuse_test_5_0000  diffuse_test_5_sc_0000  exp_diffuse_test_4_new.fits  exp_diffuse_test_5_new.fits  gas.cel  normal_dist.fits  one_src_0000_new  one_src_sc_0000
src/test/likelihood_test_suite/: .gitignore  README.md  likelihoodTestSuite.py  time_calib.py
src/test/likelihood_test_suite/data/: .gitattributes  DataE2XWgts_3percent_P305_zmax105_PSF3.fits  LiveTimeCube_4.fits  MergedEVENTS_1001_E19.fits  bexpmap_00.fits  binned_exposure.fits  binned_exposure_2.fits  binned_exposure_E1-restore.fits  binned_exposure_E1.fits  binned_exposure_E10.fits  binned_exposure_E13.fits  binned_exposure_E15.fits  binned_exposure_E3.fits  expMap_1001_E19 copy.fits  ft2_10years_reduced.fits  ft2_july09_pass8.fits  iso_P8R3_SOURCE_V3_PSF3_v1.txt  isotropic_8YP305_P8R3_SOURCE_V2_PSF3_v7_YB01.txt  isotropic_8YP305_P8R3_SOURCE_V2_v7_YB01.txt  isotropic_iem_v02.txt  isotropic_p8r3_source_v2_zmax80_4years.txt  ltcube_10years_zmax105.fits  ltcube_12years_zmax105.fits  ltcube_239557414_428903014_z100_r180_gti.fits  ltcube_8years_zmax105.fits  ltcube_july09_pass8.fits  srcMap_1001_E13.fits  srcMap_1055_E15.fits  srcMap_1312_E10.fits  srcMap_1_E1.fits  srcMap_3_2.fits  srcMap_4.fits  srcMap_4_E1.fits  srcMap_4_E3.fits  srcModel_1001.xml-border  srcModel_1001.xml-initub  srcModel_1001_memory.xml  (+8 more)
xml/: A1_Functions.dtd  A1_Functions.xml  A1_Sources.dtd  A1_Sources.xml  A1_Srcs_noFuncLib.xml  RoiCuts.dtd  RoiCuts.xml
(+31 files in other folders)
